x.y.z
=====

New features:

* Fix GitHub Issue #126: Extending limit of the canvas/background
  - The drawing area is now unlimited

Bug fixes:

* Fix the way a node is selected on right-click

Other:

* Make zooming nonlinear and increase range
* Make pasting of big group of nodes much faster

2.1.0
=====

Other:

* Updated Dutch translations

2.0.0
=====

New features:

* Fix GitHub Issue #115: Missing Hotkey for Fullscreen: F11

* Fix GitHub Issue #119: Implement group actions
  - Make it possible to move group by move handle
  - Make it possible to set text color for a node group
  - Make it possible to set color for a node group
  - Make it possible to set attached image for a node group
  - Allow group action when setting colors via node handle
  - Allow deletion of multiple nodes

* Fix GitHub Issue #117: Make it possible to set default arrow direction

* Fix GitHub Issue #118: Make it possible to delete nodes with Delete key

* Fix GitHub Issue #121: Implement group copy and paste 

* Fix GitHub Issue #122: Make it possible to select node groups also with Shift key

Bug fixes:

* Fix GitHub Issue #120: Crash when connecting to the initial node

* Fix corner case issues with layout optimizer

Other:

* Prevent the system context menu on node text edit

* Open node context menu also when right-clicking on text edit

* Don't immediately hide handles on move because it's annoying

1.21.0
======

New features:

* Fix GitHub Issue #111: Optimizer: Save optimizer settings to file
* Fix GitHub Issue #109: Make default direction of arrows configurable

1.20.0
======

New features:

* Fix GitHub Issue #38: Add display grid option

Bug fixes:

* Fix Github Issue #106: Memory leak when changing Edge width, Text size and corner radius

Other:

* Fix GitHub Issue #98: Program doesn't remember the window being maximized

1.19.0
======

New features:

* Fix GitHub Issue #77: Ctrl+S on new map should directly open 'save as' dialog
* Fix GitHub Issue #85: Export SVG