@@ -6,6 +6,9 @@ New features:
 * Fix GitHub Issue #126: Extending limit of the canvas/background
   - The drawing area is now unlimited
 
+* Fix GitHub Issue #128: Make it possible to connect selected nodes
+  - Nodes can be connected in the selection order via Edit menu
+
 Bug fixes:
 
 * Fix the way a node is selected on right-click
